--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,9 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+  host: localhost
 
 development:
   <<: *default
